<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.recipe.RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_categories_header">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_error"
                android:contentDescription="@string/content_description_default_header_food_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                android:id="@+id/ibAddToFavoritesButton"
                style="@style/ASFOapp.StyleAddToFavoriteImageButton"
                android:layout_width="@dimen/layout_size_image_button_favorites"
                android:layout_height="@dimen/layout_size_image_button_favorites"
                android:layout_marginTop="@dimen/spacing_medium_16dp"
                android:layout_marginEnd="@dimen/spacing_medium_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/add_to_favorites"
                android:src="@drawable/add_to_favorites_selector"
                tools:src="@drawable/ic_heart_filled"/>
            <TextView
                android:id="@+id/tvRecipeTitle"
                style="@style/ASFOapp.StyleHeaderTitle20"
                android:maxWidth="@dimen/layout_max_width_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium_16dp"
                android:layout_marginBottom="@dimen/spacing_medium_16dp"
                android:text="@string/cardview_title_default_recipe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvIngredients"
            style="@style/ASFOapp.StyleTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:layout_marginTop="@dimen/spacing_medium_16dp"
            android:text="@string/ingredients" />

        <TextView
            android:id="@+id/tvPortions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:layout_marginVertical="@dimen/spacing_small_6dp"
            android:text="@string/portions" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/ASFOapp.StyleSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:layout_marginVertical="@dimen/spacing_medium_16dp"
            android:background="@drawable/shape_recipe_recycler"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_ingredient" />

        <TextView
            android:id="@+id/tvMethod"
            style="@style/ASFOapp.StyleTitle20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:text="@string/cocking_method" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium_16dp"
            android:layout_marginTop="@dimen/spacing_medium_16dp"
            android:layout_marginBottom="@dimen/spacing_medium_8dp"
            android:paddingBottom="@dimen/spacing_medium_8dp"
            android:background="@drawable/shape_recipe_recycler"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_method" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>